Added option under hamburger menu to have screen stay off if BT is connected. Had only kept screen on if device was charging, however driving in car was having several instances where the screen would turn off because the device didn't think it was charging for some reason (possibly it was draining faster than it was charging?).

--- a/Uniden Remote Head/UnidenRemote.xaml
+++ b/Uniden Remote Head/UnidenRemote.xaml
@@ -87,6 +87,7 @@
                             <TextBlock Text="Blue" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
                             <Slider x:Name="sldrBlue" Grid.Column="1" Grid.Row="2" Width="200" Maximum="255" ValueChanged="sldrChange"/>
                         </Grid>
+                        <CheckBox x:Name="chkBluetoothScreen" Content="Bluetooth Keeps Screen Unlocked" HorizontalAlignment="Center" Checked="chkBluetoothScreen_Checked" Unchecked="chkBluetoothScreen_Unchecked" />
                         <TextBlock Name="tbError"
                             TextWrapping="Wrap"
                             FontSize="20" Foreground="White" Height="79" Canvas.ZIndex="-3" />
